bitfields/tests/compile_error_cases/errors/array_fields/array_field_signed_element_type.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    a: [i8; 4],
}

fn main() {}

